Atualizacoes de informacoes

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Portifólio</title>
 </head>
 
@@ -19,17 +19,11 @@
     <main class="apresentacao">
         <section class="textos">
             <h1>Sobre mim</h1>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+            <p>Me chamo André Paulo, tenho 26 anos e no momento estou estudando programação Front-end através da Alura, porém, o plano final é entender mais sobre toda a esteira Javascript.</p>
 
-            <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
-                cupidatat non.
+            <p>Quando era mais novo, realizei um curso técnico em eletroeletrônica e foi ali que tive o primeiro contato com duas paixões, a elétrica e a programação. Por 
+                motivos externos, não consegui dar sequência na minha carreira profissional nessas áreas, porém, hoje eu estou bastante focado em fazer acontecer e seguir em frente com o que eu gosto, afinal, 
+                quem trabalha com o que gosta, vive de férias não é mesmo? 
             </p>
         </section>
         <img class="imagem-apresentacao" src="./assets/imagemPessoa.png" alt="Foto da Joana Santos programando">
