--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Portifólio</title>
 </head>
 
@@ -18,8 +18,8 @@
     </header>
     <main class="apresentacao">
         <section class="textos">
-            <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
-            <p>Olá! Sou André Paulo, desenvolvedor Front-end com especialidade em Javascript, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <h1>Conhecimento é <strong> a máquina que move o mundo!</strong></h1>
+            <p>Olá! Sou André Paulo, estudante de programação Front-end e gostaria de convidá-los a apreciar os meus projetos e a conhecerem um pouco sobre mim. Qualquer feedback é bem vindo, obrigado!</p>
             <div class="botoes">
                 <h2>Acesse as minhas redes: </h2>
                 <a href="https://github.com/ApJunior98">
@@ -30,26 +30,7 @@
                     <img src="./assets/linkedin.png">
                     Linkedin
                 </a>
-                <a href="https://github.com/ApJunior98">
-                    <img src="./assets/twitch.png">
-                    Twitch
-                </a>
             </div>
-        </section>
-        <section id="sobre-mim" class="sobre-mim" style="display:none">
-            <h1>Sobre mim</h1>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-
-            <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
-                cupidatat non.
-            </p>
         </section>
         <img class="imagem-apresentacao" src="./assets/imagemPessoa.png" alt="Foto da Joana Santos programando">
     </main>
